--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/strapi": "4.5.1",
-    "@strapi/plugin-users-permissions": "4.5.1",
     "@strapi/plugin-i18n": "4.5.1",
-    "better-sqlite3": "7.4.6"
+    "@strapi/plugin-users-permissions": "4.5.1",
+    "@strapi/provider-upload-cloudinary": "~4.5.3",
+    "@strapi/strapi": "4.5.1",
+    "better-sqlite3": "7.4.6",
+    "slugify": "~1.6.5"
   },
   "author": {
     "name": "A Strapi developer"
