--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "next": "13.0.3",
+    "qs": "~6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "~4.6.0"
+    "react-icons": "~4.6.0",
+    "react-toastify": "~9.1.1"
   }
 }
