--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -5,6 +5,7 @@
             "@/components/*" : ["components/*"],
             "@/styles/*" : ["styles/*"],
             "@/config/*" : ["config/*"],
+            "@/contexts/*" : ["contexts/*"],
         }
     }
 }
