--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookie": "~0.5.0",
     "moment": "~2.29.4",
     "next": "13.0.3",
     "qs": "~6.11.0",
